- Added service account to instruction set - Put in radio buttons for dataset selections

--- a/blink_sass/pages/_users.sass
+++ b/blink_sass/pages/_users.sass
@@ -100,7 +100,10 @@
     .table .table
         background-color: transparent
 
-#register-gcp
+    i.fa-check
+        color: $isb-success
+
+#register-gcp, #user-register-sa
     margin-bottom: 30px
     ul
         list-style: circle
