--- a/templates/GenespotRE/register_gcp.html
+++ b/templates/GenespotRE/register_gcp.html
@@ -52,7 +52,7 @@
                         <li>Select the hamburger menu in the top left corner. <img src="{% static 'img/select-hamburger.png' %}" alt="Select Hamburger Menu" width="25%"/></li>
                         <li>Select IAM & Admin. <img src="{% static 'img/select-iam.png' %}" alt="Select IAM & Admin Menu Item" width="25%"/></li>
                         <li>Click + Add Member. </li>
-                        <li>Paste <code>[service account]</code> in the text box. <img src="{% static 'img/add-members.png' %}" alt="Add Member Modal Window" width="50%"/></li>
+                        <li>Paste <code>907668440978-oskt05du3ao083cke14641u35deokgjj@developer.gserviceaccount.com</code> in the text box. <img src="{% static 'img/add-members.png' %}" alt="Add Member Modal Window" width="50%"/></li>
                         <li>In the Role selection, choose Project > Viewer. <img src="{% static 'img/select-role.png' %}" alt="Select Project Viewer" width="50%"/></li>
                     </ul>
                     <br>
