-> Gene Favorites, Variable Favorites, and Workbook list pages can now all be sorted

--- a/templates/workbooks/workbook_list.html
+++ b/templates/workbooks/workbook_list.html
@@ -26,7 +26,7 @@
     <div class="panel panel-default">
         <div class="panel-body">
             {% if workbooks %}
-            <table class="table table-striped tablesorter">
+            <table id="workbook-table" class="table table-striped tablesorter">
                 <thead>
                     <th class=""></th>
                     <th class="name-col">Name</th>
