--- a/templates/variables/variable_list.html
+++ b/templates/variables/variable_list.html
@@ -26,7 +26,7 @@
         </div>
         <div class="panel-body">
             {% if variable_list %}
-                <table class="table table-stripe">
+                <table id="var-list-table" class="table table-stripe tablesorter">
                     <thead>
                         <tr>
                             <th></th>
